--- a/Encore.csproj
+++ b/Encore.csproj
@@ -12,5 +12,6 @@
     <PackageReference Include="Avalonia" Version="0.4.1-build2920-alpha"/>
     <PackageReference Include="Avalonia.Skia.Desktop" Version="0.4.1-build2920-alpha"/>
     <PackageReference Include="Avalonia.Gtk3" Version="0.4.1-build2920-alpha"/>
+    <PackageReference Include="Avalonia.Win32" Version="0.4.1-build2920-alpha"/>
   </ItemGroup>
 </Project>
